--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 	<div id="status-container">
-		<div id="status">Retrieving server info...</div>
+		<div id="status">Dropping the soap...</div>
 		<div id="loading">
 			<div id="loading-progress"></div>
 		</div>
