--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 	<div id="header">
 		<div id="title"></div>
 		<div id="subtitle">
-			We are currently playing <span id="gamemode"></span> at <span id="map"></span>
+			Dragging you into the hellish idea <span id="gamemode"></span> at <span id="map"></span>
 		</div>
 	</div>
 	<div id="status-container">
-		<div id="status">Retrieving server info...</div>
+		<div id="status">Dropping Soap...</div>
 		<div id="loading">
 			<div id="loading-progress"></div>
 		</div>
